vlib/v/checker/tests/no_interface_receiver_duplicate_a.out
vlib/v/checker/tests/no_interface_receiver_duplicate_a.vv:5:5: error: interfaces cannot be used as method receiver
    3 | }
    4 |
    5 | fn (a Abc) fun() {
      |     ~~~~~
    6 | }
