vlib/v/checker/tests/no_interface_receiver_duplicate_a.vv
interface Abc {
	fun()
}

fn (a Abc) fun() {
}
